<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.detailMovieActivity.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/detail_movie_iv_poster"
            android:layout_width="match_parent"
            android:layout_height="520dp"
            android:contentDescription="@string/poster"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_dummy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/detail_movie_btn_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/transparent_to_white_gradient"
            android:src="@drawable/transparent_to_white_gradient"
            app:layout_constraintBottom_toBottomOf="@+id/detail_movie_iv_poster"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/linear_layout_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_iv_poster">

            <TextView
                android:id="@+id/detail_movie_tv_title"
                style="@style/MainTextStyle"
                android:layout_weight="10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_movie_iv_poster" />

            <ToggleButton
                android:id="@+id/detail_movie_btn_favorite"
                android:textOff=""
                android:textOn=""
                android:backgroundTint="#df5e88"
                android:text=""
                android:layout_gravity="center"
                android:checked="false"
                android:background="@drawable/button_favorite"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/detail_movie_iv_rating"
            android:layout_width="110dp"
            android:layout_height="22dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/rating"
            android:src="@drawable/five_star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_movie" />

        <TextView
            android:id="@+id/detail_movie_tv_popularity"
            style="@style/DefaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/dummy_priority"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/detail_movie_iv_rating"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_movie" />

        <TextView
            android:id="@+id/detail_movie_tv_release_date"
            style="@style/DefaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/dummy_date"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_iv_rating" />

        <TextView
            android:id="@+id/detail_movie_tv_description"
            style="@style/DefaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/description_dummy"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_tv_release_date" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>